fix:style search results width issue on small screens

--- a/frontend/assets/sass/modules/_search.scss
+++ b/frontend/assets/sass/modules/_search.scss
@@ -56,12 +56,17 @@
 .result {
   pointer-events: all;
   width: 100%;
-  min-width: 30rem;
+  min-width: 18.75rem;
+  max-width: 90vw;
   background: var(--white);
   padding: 1rem;
   text-decoration: none;
   border-radius: 0.5rem;
   margin-bottom: 1rem;
+
+  @include media.widerThan768 {
+    min-width: 30rem;
+  }
 
   &__title {
     margin-top: 0;
